Adding text to NN and quilt.

--- a/3D/NN.html
+++ b/3D/NN.html
@@ -49,6 +49,30 @@
         </div>
       </div>
 
+      <div class="row standard-margin project-showcase">
+        <div class="col-md-12 col-sm-12">
+        As a Technical Designer, I am leveraging expertise in Unreal Engine 5, Cinema 4D, Adobe Animate, and C++ 
+        to design captivating levels and interactions. Additionally, I am aiding in developing custom tools and scripts 
+        to streamline the design process, 
+        enhancing workflow efficiency and empowering artists with unique capabilities.
+        </div>
+      </div>
+
+      <div class="row standard-margin project-showcase">
+        <div class="col-md-12 col-sm-12">
+        Nirvana Noir was 150% funded on kickstarter and was the recipient of an Epic Mega Grant. It is also an official selection at
+        the London Games Fest 2024, PAX Rising Showcase 2024, and Day of the Devs 2023.
+        </div>
+      </div>
+
+      <div class="row standard-margin project-showcase">
+        <a href="https://nirvananoir.com">
+        <div class="col-md-12 col-sm-12">
+        Learn more about Nirvana Noir
+        </div>
+    </a>
+      </div>
+
       <div class="row standard-margin project-showcase"><div class="col-md-12 col-sm-12 d-flex justify-content-center"><iframe width="1120" height="630" src="https://www.youtube.com/embed/kV29mwZ09p8?si=0CzXTWuD9EUBpoft" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
       </div>
 
