Adding Dia to the index.html file.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                  is an indigenous CHamoru designer from Guam. 
                  Currently he is a 
                  Technical Designer
-                  at Feral Cat Den working on the upcoming title called Nirvana Noir. 
+                  at Feral Cat Den working on the upcoming title called Nirvana Noir. In 2024 he completed a Civic Pedagogy Fellowship with Dia Art Foundation.
                   He is constantly trying to reconcile two worlds that exist, one that is factual, described coldly by empirical evidence and another that is intuitive, natural and mythological.</div>
            
               </div>
