Retitling novena html page.

--- a/3D/novena.html
+++ b/3D/novena.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <title>Nirvana Noir | Noah Sablan</title>
+    <title>Novena Zine | Noah Sablan</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
