Polishing pages, adding missing media.

--- a/3D/index.html
+++ b/3D/index.html
@@ -123,6 +123,16 @@
                 <p class="subtitle">Testing the limits of simulation using NVIDIA's CUDA.</p>
             </div>
         </div>
+
+        <!-- Section 9 -->
+        <div class="section" id="section9">
+            <a href="./cg.html" class="section-link"></a>
+            <div class="background"></div>
+            <div class="overlay">
+                <h1 class="title">Computer Graphics COMS 4160</h1>
+                <p class="subtitle">Columbia University: Implementing graphics pipeline.</p>
+            </div>
+        </div>        
     </div>
 <!-- 
     <main>
