--- a/3D/novena.html
+++ b/3D/novena.html
@@ -56,7 +56,7 @@
       <div class="col-md-6 col-sm-12 pb-3">
           <img src="./media/Novena-2.png" class="image-showcase mx-auto" alt="Prayer book covers.">
       </div>
-      <div class="col-md-6 col-sm-12">
+      <div class="col-md-6 col-sm-12 pb-3">
           <img src="./media/Novena-3.png" class="image-showcase mx-auto" alt="Prayer book interior.">
       </div>
   </div>
@@ -84,6 +84,47 @@
         <img src="./media/Novena-5.png" class="image-showcase mx-auto" alt="Madonna and Child image closeup.">
     </div>
     <div class="col-md-3 col-sm-3 d-flex justify-content-center">
+    </div>
+  </div>
+
+  <div class="row standard-margin project-showcase">
+    <div class="col-md-12 col-sm-12 d-flex justify-content-center">
+        <img src="./media/Novena-11.png" class="image-showcase mx-auto" alt="Madonna and Child image closeup.">
+    </div>
+  </div> 
+
+  <div class="row standard-margin project-showcase">
+    <div class="col-md-2 col-sm-2 d-flex justify-content-center">
+          </div>
+    <div class="col-md-5 col-sm-5 d-flex justify-content-center">
+      <h5>Non-Interleaved</h5>
+    </div>
+    <div class="col-md-5 col-sm-5 d-flex justify-content-center">
+      <h5>Interleaved</h5>
+    </div>
+  </div>
+
+  <div class="row standard-margin project-showcase">
+    <div class="col-md-2 col-sm-2 d-flex justify-content-center">
+      <h5>U-Law</h5>
+    </div>
+    <div class="col-md-5 col-sm-5 d-flex justify-content-center">
+      <img src="./media/Novena-8.png" class="image-showcase mx-auto" alt="Madonna and Child image closeup.">
+    </div>
+    <div class="col-md-5 col-sm-5 d-flex justify-content-center">
+        <img src="./media/Novena-7.png" class="image-showcase mx-auto" alt="Madonna and Child image closeup.">
+    </div>
+  </div>
+
+  <div class="row standard-margin project-showcase">
+    <div class="col-md-2 col-sm-2 d-flex justify-content-center">
+      <h5>A-Law</h5>
+    </div>
+    <div class="col-md-5 col-sm-5 d-flex justify-content-center">
+      <img src="./media/Novena-10.png" class="image-showcase mx-auto" alt="Madonna and Child image closeup.">
+    </div>
+    <div class="col-md-5 col-sm-5 d-flex justify-content-center">
+        <img src="./media/Novena-9.png" class="image-showcase mx-auto" alt="Madonna and Child image closeup.">
     </div>
   </div>
 
