--- a/3D/quilt.html
+++ b/3D/quilt.html
@@ -84,7 +84,7 @@
           </div>
 
           <div class="row standard-margin project-showcase">
-              <div class="col-md-6 col-sm-12 pb-3">
+              <div class="col-md-6 col-sm-12">
                   <img src="./media/quilt-3.JPG" class="image-showcase mx-auto" alt="Travel example.">
               </div>
               <div class="col-md-6 col-sm-12">
@@ -93,7 +93,7 @@
           </div>
 
           <div class="row standard-margin project-showcase">
-              <div class="col-md-6 col-sm-12 pb-3">
+              <div class="col-md-6 col-sm-12">
                   <img src="./media/quilt-5.png" class="image-showcase mx-auto" alt="Art Therapy Game environment painting.">
               </div>
               <div class="col-md-6 col-sm-12">
